add content to l2l

--- a/_posts/2018-04-23-live2love.md
+++ b/_posts/2018-04-23-live2love.md
@@ -7,17 +7,19 @@ categories: mics
 
 ## Viết về cuộc sống, viết cho cuộc sống
 
-Tôi vừa nộp xong luận văn và cũng vừa thi xong môn cuối trong đời sinh viên. Giờ thì biết bao nhiêu thứ để nhớ, để nghĩ, để dự định, để lên kế hoạch và hành động. Mọi thứ không còn theo quỷ đạo mà nhiều người khác đã đặt ra như việc ăn gì, ngủ ở đâu, học những gì,... tất cả tôi đều phải học cách tự quyết định.
+Tôi vừa nộp xong luận văn và cũng vừa thi xong môn cuối trong đời sinh viên. Giờ thì biết bao nhiêu thứ để nhớ, để nghĩ, để dự định, để lên kế hoạch và hành động. Mọi thứ không còn theo quỷ đạo mà nhiều người khác đã đặt ra như trước kia nữa. Việc ăn gì, ngủ ở đâu, học những gì,... tất cả tôi đều phải học cách tự quyết định.
 
-Cách đâu mấy hôm, tôi và mấy đứa bạn có đi "nhậu" cùng với nhau và mấy đứa hỏi nhau rằng sẽ tính làm gì tiếp theo. Không ai trả lời, chúng tôi chỉ biết nhìn nhau im lặng một hồi rồi nói lảng qua chuyện khác và chúng tôi đều biết rằng chẳng đứa nào đủ sức trả lời câu hỏi này lúc này. Tất nhiên, tìm một việc gì đó để làm, tìm một cô gái nào đó để quen là những mô típ quen thuộc mà chúng tôi đã được biết và rõ ràng chẳng ai trong chúng tôi muốn theo cái lộ trình chán phèo đó cả.
+Cách đâu mấy hôm, tôi và mấy đứa bạn có đi "nhậu" cùng với nhau và mấy đứa hỏi nhau rằng sẽ tính làm gì tiếp theo. Không ai trả lời, chúng tôi chỉ biết nhìn nhau im lặng một hồi rồi nói lảng qua chuyện khác và chúng tôi đều biết rằng chẳng đứa nào đủ sức trả lời câu hỏi này lúc này. Tất nhiên, tìm một việc gì đó để làm, tìm một cô gái nào đó để hẹ hò, phấn đấu mua những móm đồ mới, chuyển qua một chổ ở tốt hơn là những mô típ quen thuộc mà chúng tôi đã được biết mà chẳng ai trong chúng tôi muốn theo cái lộ trình chán phèo đó cả.
 
-Tôi bắt đầu (thật ra là tiếp tục) suy nghĩ về mình nên làm gì tiếp theo. Tôi may mắn hơn rất nhiều người khác khi đươc cơm no, áo ấm, học hành tử tế và trên hết là một gia đình lớn đầy yêu thương. Tôi có nhiều còn đường để đi tiếp mà nhiều người và cả tôi vạch ra. Cha tôi muốn tôi làm một công dân tử tế, có việc làm đàng hoàng và có thể làm ở bất cứ nơi nào cũng được. Mẹ tôi chỉ muốn tôi làm một anh kỹ sư, một anh kỹ sư khỏe mạnh và hạnh phúc. Thầy tôi hy vọng tôi đi du học tiếp ít nhất là thạc sĩ để làm được những công việc đàng hoàng và đáng sức. Chị tôi muốn tôi làm được một công việc ổn định, lương cao để không phải khổ và vất vã như chị đã từng trải qua. Sếp hiện tại của tôi muốn tôi làm một kỹ sư khoa học dữ liệu (data scientist) giỏi và gắng bó với công ty. Mỗi người đặt lên tôi một mong muốn và kỳ vọng khác nhau nhưng chung quy cũng muốn tôi có một cuộc sống ổn định và tốt hơn trong tương lại. Vậy còn tôi thì sao? Tôi đang nghĩ gì, cần gì, và muốn gì?
+Tôi bắt đầu suy nghĩ về mình nên làm gì tiếp theo. Tôi may mắn hơn rất nhiều người khác khi đươc cơm no, áo ấm, học hành tử tế và trên hết là có một gia đình lớn đầy yêu thương. Tôi có nhiều con đường để đi tiếp mà nhiều người và cả tôi vạch ra. Cha tôi muốn tôi làm một công dân tử tế, có việc làm đàng hoàng và có thể làm ở bất cứ nơi nào cũng được. Mẹ tôi chỉ muốn tôi làm một anh kỹ sư khỏe mạnh và hạnh phúc. Thầy tôi hy vọng tôi đi học tiếp ít nhất là thạc sĩ để làm được những công việc thú vị và đáng sức. Chị tôi muốn tôi làm được một công việc ổn định, lương cao để không phải khổ và vất vã như chị đã từng trải qua. Sếp hiện tại của tôi muốn tôi làm một kỹ sư khoa học dữ liệu (data science engineer) giỏi và gắng bó với công ty. Mỗi người đặt lên tôi một mong muốn và kỳ vọng khác nhau nhưng chung quy cũng muốn tôi có một cuộc sống ổn định và tốt hơn trong tương lại. Vậy còn tôi thì sao? Tôi đang nghĩ gì, cần gì, và muốn gì?
 
-Tôi bắt đầu suy nghĩ xem mình đang cần gì mà muốn gì?
+<!--Tôi bắt đầu suy nghĩ xem mình đang cần gì mà muốn gì?
 Ồ, tôi còn quá trẻ, tôi không muốn hướng tới sự ổn định, tôi muốn làm cái gì đó thật hay, thật ngầu, thật ý nghĩ với cuộc sống để đáng với sức trẻ này và cũng  đồng thời phải tạo được tiềm lực để tương lai có hướng phát triển tôt.
 WTF??? Gì mà nhiều thế! Rốt cuộc là mình muốn cái gì nào?
 Nhớ lại, khi tôi còn là học sinh, tôi mong muốn sau này sẽ trở thành một lập trình viên với kiến thức đầy mình, có thể tạo ra những ứng dụng hay ho trên máy tình và điện thoại, thậm chí, những năm cấp 3 tôi đã cố gắng làm một vài ứng dụng chỉ với ngôn ngữ *Pascal*.
 Nhưng rồi khi lên đại học, mọi thứ đã khác, góc nhìn tôi rộng hơn và tôi cũng biết sức làm của một người có hạn, tôi chọn học những cái thật thú vị khi lập trình *Android* để viết ứng dụng trên điện thoại.
 Nhưng sau khi nắm được cái cơ bản, tôi thấy nó không làm tôi thỏa mãn và tôi muốn học được cái gì đó khó hơn, tôi chọn lập trình *Java* rồi đến xử lý ảnh, bảo mật, và hiện tại là khoa học dữ liệu.
 Và rồi, sau khi cưỡi ngựa xem hoa xong các vấn đề khó của khoa học máy tính, tôi bắt đầu nghĩ tới các công việc khác như kinh doanh, tài chính, marketing và thậm chí là cả nông nghiệp.  
-Dừng lại, hít thở một hơi thật dài và tôi nhận ra những thứ mình theo đuổi như hiện tại rốt cuộc cũng chỉ là bắt bản thân phục vụ những cảm xúc và đam mê nhất thời. Tôi nghĩ mình cần có kỹ luật hơn với bản thân và công việc. Tôi nghiêm túc suy nghĩ thử xem mình cần làm cái gì đó cho có ý nghĩa mà không phải bỏ dở nữa chừng như bấy lâu nay đây. À, vậy thử nghĩ bản thân mình có thể làm được việc gì có ý nghĩa với cuộc đời đây? Tôi tìm đọc một số bài viết ý nghĩa của cuộc đời là gì và tôi nhận ra mình đã đọc phải thứ không nên đọc. Tôi thấy được mình cũng như bao nhiêu người khác, được cha mẹ ban cho mạng sống một cách thật kỳ diệu, lớn lên, làm việc, cưới vợ, sinh con, nuôi nấng con cái và rồi cuối cùng cũng về vớt cát bụi. 
+Dừng lại, hít thở một hơi thật dài và tôi nhận ra những thứ mình theo đuổi như hiện tại rốt cuộc cũng chỉ là bắt bản thân phục vụ những cảm xúc và đam mê nhất thời. Tôi nghĩ mình cần có kỹ luật hơn với bản thân và công việc. Tôi nghiêm túc suy nghĩ thử xem mình cần làm cái gì đó cho có ý nghĩa mà không phải bỏ dở nữa chừng như bấy lâu nay đây. À, vậy thử nghĩ bản thân mình có thể làm được việc gì có ý nghĩa với cuộc đời đây? Tôi tìm đọc một số bài viết ý nghĩa của cuộc đời là gì và tôi nhận ra mình đã đọc phải thứ không nên đọc. Tôi thấy được mình cũng như bao nhiêu người khác, được cha mẹ ban cho mạng sống một cách thật kỳ diệu, lớn lên, làm việc, cưới vợ, sinh con, nuôi nấng con cái và rồi cuối cùng cũng về vớt cát bụi.
+-->
+Tôi bắt đầu suy nghĩ nghiêm túc và khoa học xem tôi nên muốn gì. Trong quá khứ, nhiều lần những mong muốn và hành động của tôi cũng chỉ là bắt bản thân phục vụ những cảm xúc và đam mê nhất thời. Tôi bỏ ra vài giờ đồng hồ để chơi game và vài tuần liên tục như thế, cuối cùng thứ tôi có được là hiểu được mấy đứa bạn đang chém gió về điều gì và trò chuyện được với vài người bạn khác. Cho đến bây giờ, khoảng thời gian và những mối quan hệ lúc đó của tôi là vô ích hoàn toàn. Tôi bỏ ra cả năm trời để học bảo mật và tạo rất nhiều mối quan hệ với anh em trong giới security nhưng từ khi chuyển qua là khoa học dữ liệu, tất cả các kiến thức, mối quan hệ đó gần như không còn ý nghĩa với tôi nữa. Đó chỉ là hai trong số  nhiều lần tôi *đam mê* không có tính toán và rồi kết quả tôi nhận được là *không được gì*. Nhưng việc đó cũng chẳng sao. Tôi còn trẻ! Tôi được quyền sai, tôi nên sai và tôi cần phải sai. Việc sai giúp tôi biết được thế nào là đúng và việc sai giúp tôi biết được cách sửa sai nhưng thế nào. Nhưng hiện tại, tôi đã 22 tuổi. Tôi nghĩ mình cần có kỹ luật hơn với bản thân và công việc. Tôi nghiêm túc suy nghĩ thử xem mình cần làm cái gì đó cho có ý nghĩa mà không phải bỏ dở nữa chừng như bấy lâu nay đây. À, vậy thử nghĩ bản thân mình có thể làm được việc gì có ý nghĩa với cuộc đời đây? Tôi tìm đọc một số bài viết ý nghĩa của cuộc đời là gì và tôi nhận ra mình đã đọc phải thứ không nên đọc. Tôi thấy được mình cũng như bao nhiêu người khác, được cha mẹ ban cho mạng sống một cách thật kỳ diệu, lớn lên, làm việc, cưới vợ, sinh con, nuôi nấng con cái và rồi cuối cùng cũng về vớt cát bụi.
