--- a/_posts/2018-04-23-hello.md
+++ b/_posts/2018-04-23-hello.md
@@ -5,86 +5,4 @@ date:   2018-04-22
 categories: about
 ---
 
-
-## Duc Nguyen-tan
-============
-
--------------------    
-Faculty of CSE, Bach Khoa University, VNU-HCM.  
-268 Ly Thuong Kiet, Ward 14, Dist 10, HCMC, Vietnam.
-nguyentanduc96@gmail.com  
-@ducbk14  
-(+84)1674 909 694
-
-----------------------------
-
-
-Education
----------
-2014 - June 2018 (expected) :   **B.E, in computer science**; Bach Khoa University (Vietnam)
-
-
-Experience
-----------
-
-**Data scientist at _Zalo Group_:**
-
-Nov 2017 - now
-
-Research and develop algorithms and machine learning models to solve user experience problems at Zalo:
-
-* Apply social network analysis knowledge to Zalo.
-
-* Organize Zalo AI Challenge 2018.
-
-* Apply Computer vision for Zalo album suggestion.
-
-* Build pipeline avatar classification for 100M Zalo users.
-
-* Build computer vision core for "Kết đôi" module.
-
-* Co-working closely with Production Department.
-
-**Backend engineer at _123CS - VNG Corporation_**
-
-June 2017 - Aug 2017
-
-* Learn about the 123CS environment.
-* Learn about Natural Language Processing and apply Machine Learning to building the chatbot system.
-* Build a chatbot that uses data from customer care history.
-
-
-Technical Skillset
---------------------
-
-Programming languages: C/C++, Java, Python, R, Matlab, Julia, C#, PHP, Scala.
-
-Operating systems: Linux, Windows, MAC.
-
-Database: Oracle SQL, MySQL, MongoDB, Redis, PostgreSQL.
-
-Projects
---------------------
-
-**Predicting Length of Stay**
-
- * Apply Machine Learning to predict length of stay in hospital.
-
-**Machine Learning**
-* Facial landmark detection, Captcha recognition using CNN, AutoPlay game using deep reinforcement learing, Solve challenges in Kaggle.
-
-**BK E-Portfolio**
-
- * A web site for students to create their portfolio to save the project and assignment what they have learned. At the same time, this is also a website that helps faculty or employers search for potential students.
-
-Honors & Awards
---------------------
-* 2018 1st Prize, Cinnamon AI Marathon (Document layout analysis and Optical Character Recognition) 
-* 2017 1st Prize, Zalo hackathon (internal team)
-* 2017 Top 8 final teams, Viettel MatesCTF, National Security Competition for Students
-* 2015 Honorable Mention, ACM-ICPC Asia Hanoi Regional Programing Contest
-* 2014 3nd Prize, QuangNgai Province Olympiad in Informatics Competition for Students
-* 2013 Consolation Prize, Final National Internet Mathematics Solving contest for Student
-* 2013 2nd Prize, Quang Ngai Province National Internet Mathematics Solving contest for Students
-* 2013 Consolation Prize and Software creative, ”Tin Hoc Tre” Programming contest for Students
-* 2012 2nd Prize, QuangNgai Province Olympiad in Informatics Competition for Students
+ I’m a Data Scientist, Deep Learning Engineer _and_ Big Data Engineer.
