add link MLDL to dukn

--- a/_posts/2018-04-23-hello.md
+++ b/_posts/2018-04-23-hello.md
@@ -5,4 +5,5 @@ date:   2018-04-22
 categories: about
 ---
 
- I’m a Data Scientist, Deep Learning Engineer _and_ Big Data Engineer.
+I’m a Data Scientist, Deep Learning Engineer _and_ Big Data Engineer.
+Study site: https://dukn.github.io/MLDL 
