convert text to link

--- a/_posts/2018-04-23-hello.md
+++ b/_posts/2018-04-23-hello.md
@@ -6,4 +6,5 @@ categories: about
 ---
 
 I’m a Data Scientist, Deep Learning Engineer _and_ Big Data Engineer.
-Study site: https://dukn.github.io/MLDL 
+
+Study site: [https://dukn.github.io/MLDL](https://dukn.github.io/MLDL) 
